<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.constraintlayout.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvTitle"
        android:textSize="30sp"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="54dp" />

    <EditText
        android:id="@+id/edtValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edtvaluebackground"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/edtValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvTitle" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnOne"
        app:layout_constraintStart_toEndOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnFour" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/btnTwo"
        app:layout_constraintStart_toStartOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnThree"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnSix"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSix" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFour"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven"
        app:layout_constraintLeft_toLeftOf="@+id/btnSeven" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFive"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnEight"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSix"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnNine"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnNine" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSeven"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/edtValue"
        app:layout_constraintLeft_toRightOf="@+id/btnEight"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEight"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/edtValue"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNine"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/edtValue"
        app:layout_constraintRight_toLeftOf="@+id/btnEight"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnZero"
        app:layout_constraintEnd_toStartOf="@+id/btnTwo"
        app:layout_constraintStart_toEndOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnThree" />

    <Button
        android:id="@+id/btnComma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnComma"
        app:layout_constraintEnd_toStartOf="@+id/btnOne"
        app:layout_constraintStart_toEndOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnOne" />

</android.support.constraint.ConstraintLayout>
